iogt/static/css/iogt.css
/* ... */
.comment-moderation-table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 26px;
    border: 1px solid rgba(0, 0, 0, 0.2);
}
.comment-moderation-table td, th {
    text-align: left;
    padding: 8px 16px;
}
.comment-moderation-table .width-32 {
    width: 32%;
}
.comment-moderation-table thead tr {
    background: #F0F0F0;
}
.comment-moderation-table thead tr th {
    font-size: 16px;
    color: #000000;
    font-weight: 500;
}
.comment-moderation-table thead td:last-child, th:last-child {
    text-align: right;
    padding-right: 55px;
}
.comment-moderation-table tbody tr {
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}
.comment-moderation-table tbody td {
    padding:16px;
}

.comment-moderation-table tbody a {
    text-decoration: none;
    font-size: 16px;
    font-weight: 500;
    color: #000000;
}

.comment-moderation-table tbody a:last-child {
    color: #7B7B7B;
    margin-left: 14px; 
}

.comment-moderation-comment {
    position: relative;
    display: inline-block;
    width: 300px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.comment-moderation {
    padding: 12px 16px;
    width: 132px;
    height: 46px;
    border-radius: 24px;
    text-decoration: none;
    border: 1.5px solid #d8d8d8;
    font-size: 16px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 600;
    color: #303030;
    margin-top: 24px;
}
.comment-moderation.next-btn {
    background-color: #303030;
    color: #fff;
}

